# PriNCe

./: .gitignore  CRPropagation5.c  LICENSE  README.md  README.rst  azure-pipelines.yml  debug_prince.py  prince_config.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: advanced.rst  citations.rst  conf.py  index.rst  intro.rst  modules.rst  requirements.txt  tutorial.rst
examples/: Create_Kernel.ipynb  Propagate_different_CS_and_EBL.ipynb  Propagate_single_spectrum.ipynb
prince/: config.py  core.py  cosmology.py  cr_sources.py  cr_sources_new.py  cross_sections.py  data.py  decays.py  intcs.py  interaction_rates.py  interaction_rates_new.py  interacton_rates.py  phenom_relations.py  photonfields.py  solvers.py  solvers_energy.py  solvers_new.py  util.py
prince/_deprecated/: __init__.py  util.py
prince/cross_sections/: __init__.py  _phenom_relations.py  base.py  disintegration.py  phenom_relations.py  photo_meson.py  response.py
prince/solvers/: __init__.py  mkl_interface.py  partial_diff.py  propagation.py
prince/tests/: test_csec.py  test_intrates.py  test_propagation.py
prince_cr/: config.py  core.py  cosmology.py  cr_sources.py  data.py  decays.py  interaction_rates.py  photonfields.py  util.py
prince_cr/_deprecated/: __init__.py  _photo_meson.py  interpolation.py  util.py
prince_cr/cross_sections/: __init__.py  _phenom_relations.py  base.py  disintegration.py  photo_meson.py  response.py
prince_cr/solvers/: __init__.py  mkl_interface.py  partial_diff.py  propagation.py
prince_cr/tests/: test_csec.py  test_intrates.py  (+1 more)
tests/: cross_sections.ipynb  decays.ipynb  interaction_rates.ipynb  proton_propagation.ipynb  test_csec.py  test_intrates.py  test_propagation.py
utils/: make_particle_dict.py
(+9 files in other folders)
